--- a/Libro.tex
+++ b/Libro.tex
@@ -2643,42 +2643,13 @@ Se noti che la sofferenza non cala, non insistere, forse la ferita è ancora tro
 Se sentiamo che c'è ancora qualcosa di irrisolto con qualcuno e, possiamo chiarirci di persona, facciamolo, altrimenti possiamo scrivergli una lettera e poi, decidere se inviarla o meno. In questa lettera trova una conclusione con quella persona o situazione.
 Questa è la tecnica della lettera mai inviata. Anche quando abbiamo l'intento di inviare questo messaggio, spesso ci accorgeremo di non averne più bisogno.
 
-
-
-
-
-
 Abbiamo detto che se sì continua a parlare di un certo disagio si rischia di calcificarlo e renderlo cronico. Al contempo sappiamo
 che tenere tutto dentro fa male, quindi, qual è la strada giusta? Sì se ci lamentiamo e basta, senza un minimo di
-autocritica, rischiamo di calcificare e fomentare l'odio verso l'oggetto in questione. Se notiamo
-che i nostri scritti sono spesso rivolti verso qualcosa di esterno a noi possiamo porci delle domande: Perché sto
-scrivendo in questo modo? Come mi fa sentire quello che sto scrivendo? Perché pensare all'altra
-persona mi infastidisce tanto? Posso trovare un lato positivo in quello che è successo (la risposta spesso è sì)?
+autocritica, rischiamo di calcificare il disagio. Se notiamo che i nostri scritti sono spesso rivolti verso qualcosa di esterno a noi possiamo porci delle domande: 
+Perché sto scrivendo in questo modo? Come mi fa sentire quello che sto scrivendo? Perché pensare all'altra persona mi infastidisce tanto? Posso trovare un lato positivo in quello che è successo (la risposta spesso è sì)?
 Se il problema è (troppo spesso) qualcos'altro, allora il problema potremmo essere noi.
 
 Per approfondire: Il potere della scrittura\endnote{\raggedright\url{https://www.amazon.it/dp/8848135366}}
-
-Esistono altri approcci alla scrittura oltre a quella espressiva. Possiamo essere più metodici e, una volta individuato
-un problema, possiamo indagare su che cosa sia, definirlo, vedere chi ne è coinvolto, dove e quando si verifica ecc…
-successivamente scriviamo le “tentate soluzioni”, ovvero, tutte le azioni che abbiamo intrapreso per risolvere il
-problema, ma che non hanno funzionato. A volte attuiamo delle soluzione che intuitivamente sono giuste, ma
-poi nella pratica non funzionano. Ad esempio, quando tentiamo di controllare le nostre sensazioni in una situazione di
-paura o ansia, nel tentativo di tornare calmi, controllando il battito cardiaco o la respirazione, provochiamo un effetto
-contrario e, più si cerca di assumere il controllo e più si rischia di perderlo, portando la persona a essere sempre meno in grado
-di autoregolarsi. Quando abbiamo la lista delle tentate soluzioni, proviamo a scrivere una storia assurda, dove
-cerchiamo tutti i metodi per peggiorare il più possibile la situazione. In questo modo avremo altri spunti su tutto ciò
-che non dovremmo fare. Ora immaginiamo come sarebbe la nostra
-situazione una volta risolto il problema. Ora che sappiamo quale sarà il nostro punto d'arrivo, possiamo capire quali sono i passi necessari per
-raggiungerlo. Questo risulta molto difficile, perché abbiamo infinite strade e non sappiamo quale scegliere. Qua ci
-giunge in aiuto la “tecnica dello scalatore”. Immaginiamo di essere ai piedi della montagna e che la risoluzione del
-problema sia la vetta. Noi stiamo cercando un percorso che parta dai piedi della montagna dove ci sono tantissimi
-sentieri, ma non tutti portano alla vetta. Ragioniamo al contrario, guardiamo la vetta e guardiamo pochi metri sotto se
-troviamo un passaggio, appena lo troviamo guardiamo ancora un pezzettino più in basso e così via, fino ad arrivare dove
-siamo noi ora. Pensiamo quindi a quale sarà la nostra ultima azione, che ci condurrà alla soluzione del
-problema e, poi al penultimo passaggio, poi al terzultimo e così via. 
-Per approfondire questo metodo vi invito a leggere “Problem Solving strategico da
-tasca”\endnote{\raggedright\url{https://www.amazon.it/dp/B00D8BHM18}} di Giorgio
-Nardone.
 
 Altri esercizi con la scrittura
 
@@ -2686,7 +2657,6 @@ Altri esercizi con la scrittura
 \item Scrivere tre cose al giorno di cui siamo grati
 \item Se avessi la certezza al 100\% di avere successo, in quale attività di lanceresti?
 \item Completa la frase: La vita è meravigliosa anche se… (Aspettarsi di avere una vita sempre meravigliosa rischia di rovinarcela)
-\item Riconosci il valore e i punti di forza delle persone, anche e soprattutto quelle che non ti stanno simpatiche. 
 \item Fare un diario dei propri successi 
 \item Fare un diario delle proprie lamentele 
 \item Per guardare con distacco emotivo la nostra attività mentale possiamo pensare a un episodio negativo, che non ci fa stare bene, che ci provoca rabbia, paura, disagio ecc… Lascia che spontaneamente emergano le sensazioni, resta un po' con loro, vivile, cerca di stare a tuo agio anche con questi sentimenti. Ora descrivi la scena come se la stessi vedendo al cinema, cambiano le sensazioni se le guardi da esterno? Ora possiamo pensare a cosa avrebbe potuto fare di diverso il nostro protagonista e, infine cosa potrebbe fare nel futuro.
@@ -2701,98 +2671,52 @@ che in quel passato, razionalmente, dovevi prendere quella decisione, ma cosa te
 potresti essere ancora sabotato da questo impedimento?
 \item Scrivere su un taccuino portatile tutte le volte che siamo giudicanti verso noi e gli altri
 \item Cos'ho paura di perdere?
-\item Dare un voto da 1 a 10 alla propria vita. Mettiamo caso di aver scritto 7. Ora chiedersi: perché non ho messo 6? E
-cosa mi servirebbe per mettere 8? 
+\item Dare un voto da 1 a 10 alla propria vita. Mettiamo caso di aver scritto 7. Ora chiedersi: perché non ho messo 6? E cosa mi servirebbe per mettere 8? 
 \end{itemize}
 
 \subsubsection{Meditazione}
-Spesso la meditazione viene associata
-ad una pratica new wave, orientale, da figli dei fiori, qualcosa di poco oggettivo, poco concreto, poco scientifico. Le
-ricerche e le pubblicazioni in merito sono diventate numerose come possiamo vedere ad esempio da Google Scholar.
+Spesso la meditazione viene associata ad una pratica new wave, orientale, da figli dei fiori, qualcosa di poco oggettivo, poco concreto, poco scientifico. Se cerchiamo tra le ricerche scientifiche, tra quelle con più evidenze, troveremo proprio la meditazione mindfulness.
 
-La meditazione è una pratica che associamo all'oriente, ma in realtà idee simili le troviamo anche in occidente già dall'antichità con gli stoici, gli
-gnostici, Plotino, i neoplatonici fino ad arrivare alla filosofia tedesca del novecento. Sextus Empiricus descriveva l’epoché, la sospensione volontaria del giudizio sui non‑evidenti per raggiungere atarassia (tranquillità interiore); concettualmente piuttosto simile all’osservazione imparziale dei pensieri presente in alcune pratiche meditative orientali. La mindfulness, secondo la definizione del suo inventore Jon kabat-zinn e portare l'attenzione al momento presente in maniera intenzionale e non giudicante.
+Seppur sia una pratica spesso associata all'oriente, idee simili le troviamo anche in occidente, già dall'antichità con gli stoici, gli
+gnostici, Plotino, i neoplatonici fino ad arrivare alla filosofia tedesca del novecento. Sextus Empiricus descriveva l’epoché, la sospensione volontaria del giudizio per raggiungere atarassia e la tranquillità interiore. Sant'Agostino diceva di vedere i pensieri come uccelli a cui
+permettiamo di girare liberamente nella nostra testa, ma a cui vietiamo di fargli fare il nido. La mindfulness, secondo la definizione del suo inventore Jon kabat-zinn e portare l'attenzione al momento presente in maniera intenzionale e non giudicante.
 La meditazione è sentire ciò che c'è e non ciò che vorresti che ci fosse. Osservare ogni pensiero e notare che non siamo noi.
-Immagina di incamminarsi nel bosco senza pensare di dover tornare indietro questo è un po' lo stato meditativo, vivere ciò che c'è non ciò che vorremmo ci fosse, senza uno scopo.
+Immagina di incamminarsi nel bosco senza pensare di dover tornare indietro, senza uno scopo, questo è un po' lo stato meditativo.
 
-Legate alla meditazione, inoltre, ci sono molte teorie e molta confusione. La domande più classiche sono: Su cosa mediti? Ci si riesce a rilassare?
-Non tutte le meditazioni servono a rilassarsi. 
-Quando poi si cercano informazioni sulla meditazione sembra invece che il suo scopo sia quello di non pensare mai. 
-I pensieri ci fanno soffrire quindi cerchiamo di non pensarci, ma come abbiamo visto, oltre a essere impossibile è un modo di scappare dal problema.
+Domande frequenti sulla meditazione: 
+\begin{itemize}
+\item Su cosa si medita? Sui propri pensieri. Concentriamoci su qualcosa, come il respiro e, appena ci accorgiamo che è emerso un pensiero e, la nostra attenzione non è più sulla respirazione, ritorniamo sul respiro senza criticarci.
+\item Serve per rilassarsi? Alcune meditazioni servono a questo, ma quella che stiamo cercando noi è quella di consapevolezza dei propri pensieri.
+\item Bisogna smettere di pensare? No, è impossibile e dannoso, si tratta di accorgersi quando lo facciamo, ma solo mentre meditiamo, non bisogna cercare di farlo per tutto il giorno.
+\end{itemize}
 
-Il fine della meditazione non va ricercato nei dieci minuti in cui stiamo seduti con gli occhi chiusi, ma nel resto della giornata. Gli scopi sono quelli di diventare più
-resilienti, più consapevoli e presenti alla vita che spesso scorre in automatico senza che ce ne rendiamo conto. Lo scopo è non avere scopo, accettare. Accettare i nostri pensieri, i nostri
-schemi mentali, i lati brutti di noi ed essere a proprio agio con ogni aspetto della nostra persona, consapevoli che
-non siamo i nostri pensieri e, che quindi possiamo smettere giudicarli e giudicarci.
-Dobbiamo solo sederci e osservare i pensieri che nascono e lasciarli andare, senza giudicarli, senza inseguirli, senza attaccarsi, senza caricarli di altre parole.
-Questo è il concetto di: metacognizione, pensare che stiamo pensando, la capacità di distanziarsi, auto-osservare e riflettere sui propri
-stati mentali. Se mi viene sete penso a me che sto bevendo, con la metacognizione osserviamo
-noi stessi mentre stiamo pensando a noi che vorremmo bere. Sebbene non possiamo eliminare del tutto i pensieri spontanei, possiamo imparare a gestire l’attenzione e le nostre azioni. Possiamo quindi imparare ad accorgerci quando sorge un pensiero e decidere
-intenzionalmente se dagli attenzione o meno, in base al fatto che riteniamo utile o meno un certo pensiero, quindi non
-buono o cattivo, ma utile o inutile. Questa analisi va fatta quando non siamo in meditazione. Quando meditiamo non
-dobbiamo fare alcuna analisi sui pensieri, ma soltanto osservarli, esserne testimoni per poi lasciarli andare.
+Gli scopi sono quelli di diventare più resilienti, più consapevoli, accettare i nostri contenuti interiori e diventare presenti alla vita che spesso scorre in automatico senza che ce ne rendiamo conto. 
+Dobbiamo solo sederci e osservare i pensieri che nascono e lasciarli andare, senza giudicarli, senza inseguirli, senza attaccarsi, senza caricarli di altre parole. Così da imparare ad accorgerci quando sorge un pensiero e decidere intenzionalmente se dagli attenzione o meno, se lo riteniamo utile o meno.
 
-Gurdjieff notò che dicendosi "io sono" portava la sua mente a completare la frase. In questo esercizio cerchiamo invece di restare nel presente e accorgerci di cosa emerge. Dire "io sono" e basta, senza completarlo con qualcosa.
+Non bisogna restare costantemente nel presente, ma praticare la meditazione in modo che i frutti di questo esercizio emergano spontaneamente durante la giornata. Durante la giornata invece, se emergono pensieri negativi possiamo metterli da parte e affrontarli successivamente e, quelli positivi invece possiamo viverli appieno. Se invece stiamo meditando dovremmo mettere da parte sia i pensieri negativi che quelli positivi, per tornare gentilmente al nostro respiro.
 
-Nella meditazione cerchiamo di evitare l'attaccamento, sia dalle sensazioni positive che quelle negative. Se vedo un film mi fa ridere o piangere, ci sta esprimere queste emozioni, o nel caso di un lutto, se volessimo intrattenerci per scappare dal dolore, se fatto solo per un periodo iniziale, potrebbe essere una scelta giusta.
-Non bisogna restare costantemente nel presente, ma praticare la meditazione in modo che i frutti di questo esercizio emergano spontaneamente durante la giornata. Durante la giornata invece, se emergono pensieri negativi possiamo metterli da parte, quelli positivi invece possiamo viverli appieno. Se invece stiamo meditando dovremmo mettere da parte sia i pensieri negativi che quelli positivi, per tornare gentilmente al nostro respiro.
-
-Non solo in oriente si cercava questo scopo, non scopo. Sant'Agostino diceva di vedere i pensieri come uccelli a cui
-permettiamo di girare liberamente nella nostra testa, ma a cui vietiamo di fargli fare il nido. 
-
-\begin{mdframed}[linewidth=1pt]
-Storia dello yogi impaziente: uno yogi indiano, ritiratosi lontano da tutto e da tutti su una montagna, inizia a
-meditare per trovare la pace interiore. Un monaco, con molta insistenza, si reca in cima ala montagna per fargli
-domande su quello che ha imparato. Lo yogi si recò in cima alla montagna per non avere distrazioni e non essere
-interrotto dalla sua pratica meditativa. Il monaco però è desideroso di ricevere i suoi insegnamenti, così lo
-interrompe una, due, tre volte fino a quando lo yogi, a un certo punto, perde le staffe e va su tutte le furie. La
-morale della storia è proprio questa! Lo scopo della meditazione è riuscire a essere in uno stato meditativo per il
-maggior numero di momenti durante la giornata, più che durante la meditazione in sé.
-\end{mdframed}
-
-Quante volte mangiamo di fretta, magari in pausa pranzo, continuando a lavorare, senza aver assaporato il cibo che
-avevamo nel piatto. Quante volte non godiamo del piacere di farci una bella doccia, ma usiamo quel tempo ancora una
-volta per alimentare il turbinio frenetico dei nostri pensieri? Quando ci troviamo a leggere per la ventesima volta le
-scritte sulla scatola dei cereali, ci troviamo in uno stato in cui la mente cospira per rimanere occupata e
-distoglierci dal momento presente. Lo scopo della meditazione è portarci in uno stato contemplativo, dove anche quando
-ci laviamo i denti siamo presenti, siamo consapevoli, prestiamo attenzione sulle sensazioni corporee, la temperatura, i
-profumi, le sensazioni ecc… Si tratta di dare la vostra piena attenzione a qualsiasi cosa stiate facendo in quel
-momento. In questo modo, In questo modo, la vostra attenzione sarà pienamente rivolta al presente, riducendo la tendenza a disperdersi in pensieri su dove vorreste essere, cosa vorreste fare o come vorreste che le cose fossero diverse, pensieri che spesso alimentano stress e frustrazione, perché sarete invece attenti a ciò che state vivendo. Invece di sprofondare nel cattivo umore appena vi ricordate che dovete andare a lavoro, che avete una
-riunione, che uno vi ha rubato il parcheggio ecc.. limitatevi a essere testimoni della vostra reazione. 
-Osservate la sensazione arrivare e poi andarsene. Se inciampate nel gatto, invece di prendervela con il vostro
-amico felino, accertarvi che stia bene invece di concentrarvi sulle vostre frustrazioni. Dimenticando il vostro disagio
-con questo semplice gesto di altruismo, inizierete la giornata daccapo. E così di seguito, passando da
-un'attività alla successiva con un senso di scopo, attenzione e consapevolezza.
+Quante volte mangiamo di fretta, magari in pausa pranzo, continuando a lavorare, senza aver assaporato il cibo che avevamo nel piatto. Lo scopo della meditazione è portarci in uno stato contemplativo, dove anche quando ci laviamo i denti siamo presenti, siamo consapevoli, prestiamo attenzione sulle sensazioni corporee, la temperatura, i profumi, le sensazioni ecc… Si tratta di dare la nostra piena attenzione a qualsiasi cosa stiamo facendo in quel
+momento, riducendo la tendenza a disperdersi in pensieri su dove vorreste essere, cosa vorreste fare o come vorreste che le cose fossero diverse. Invece di sprofondare nel cattivo umore appena vi ricordate che dovete andare a lavoro, che avete una riunione, che uno vi ha rubato il parcheggio ecc.. limitatevi a essere testimoni della vostra reazione. 
+Osservate la sensazione arrivare e poi andarsene. 
 Perchè è importante essere presenti? Sogniamo spesso il futuro e, quando il futuro diventa presente, sogniamo ancora un nuovo futuro. Con la presenza ci alleniamo a godere di quel futuro che è già ora.
-
-La meditazione serve a creare uno spazio tra noi e i nostri pensieri. 
-Quindi non è un fine, ma un mezzo, come la palestra, che è un mezzo per raggiungere il fine della forma fisica. La meditazione
-è un mezzo per raggiungere il fine di non identificarsi coi nostri pensieri e accorgersi dei propri schemi mentali,
-diventare più consapevoli, oltre a dirigere intenzionalmente la nostra attenzione. Solitamente quando sorgono i
-pensieri, li seguiamo, li riempiamo di altre parole, ne siamo intrappolati. Con la
-meditazione, i pensieri continueranno a sorgere come prima, ma noi possiamo cercare di accorgerci e prendere i pensieri per
-ciò che sono, un insieme di parole e non sentenze certe, in modo da poter ritornare a dare la nostra attenzione a ciò che
-stavamo facendo. Quindi non serve nemmeno a rimanere concentrati tutto il giorno sul nostro respiro. 
-Serve a dare attenzione a ciò che per noi è importante in quel momento. L'obiettivo della meditazione non è
-nemmeno cercare di restare tutto il tempo nel presente, è semplicemente accorgerti di ciò che capita.
 
 La meditazione non va vista come una cura, ma una prevenzione. Non andiamo in palestra con il mal di schiena, ma l'andare in palestra può aiutarci a essere meno soggetti a vari acciacchi.
 
 Un modo per iniziare la meditazione è quello di cercare un'app che vi possa guidare nella pratica o audio che potete trovare su YouTube e infine i libri. Tra le letture più interessanti ho trovato "Libera la mente"\endnote{\raggedright\url{https://www.amazon.it/dp/885112552X}}. 
-Per meditare possono bastare 10 minuti per iniziare, dove stare seduti. Meglio non sdraiati siccome si rischia di addormentarsi.
-Il nostro scopo infatti, non è rilassarsi, ma restare concentrati. Ora portiamo la nostra attenzione su qualcosa, solitamente è il respiro, ma possono essere anche mani, piedi e bocca per via della loro sensibilità. 
-Vi accorgerete che spontaneamente, senza che ve ne rendiate conto, nasceranno dei pensieri e a quel punto
-sarete concentrati su essi e non più sul respiro. È normale e probabilmente succederà sempre. Lo
-scopo non è non pensare, ma accorgersi di quando non siete più concentrati e, riportare l'attenzione sul pensiero, con gentilezza, senza colpevolizzarsi per non essere riusciti a mantenere la concentrazione. Se nella nostra testa parte una canzone, non tentare di fermarla, esattamente come per gli altri contenuti, ti accorgi e ritorni sul respiro, lasciando la canzone sullo sfondo della nostra attenzione.
+Per meditare possono bastare anche 2 o 3 minuti per iniziare. Meglio stare seduti e non sdraiati siccome si rischia di addormentarsi.
+Ora portiamo la nostra attenzione su qualcosa, solitamente è il respiro, ma possono essere anche mani, piedi o bocca per via della loro sensibilità. 
+Vi accorgerete che spontaneamente, senza che ve ne rendiate conto, nasceranno dei pensieri e, a quel punto, sarete concentrati su essi e non più sul respiro. È normale e succederà sempre. Lo scopo non è non pensare, ma accorgersi di quando non siete più concentrati e, riportare l'attenzione sul respiro, con gentilezza, senza colpevolizzarsi per non essere riusciti a mantenere la concentrazione.
 
-La gentilezza è la chiave della consapevolezza, anche al di fuori della meditazione. quando notiamo un lato di
-noi che non ci piace non dobbiamo punirci. Questo non per deresponsabilizzarci, ma per aumentare le probabilità di
-accorgersene anche la prossima volta di essere tornati a questo pensiero. Se ci puniamo, il nostro cervello assocerà questa capacità a qualcosa di doloroso
-e lui, non volendo soffrire, tenderà a notarlo sempre meno. Una meditazione ben riuscita non è quando riusciamo a restare più tempo
-senza pensare, ma al contrario, quante più volte pensiamo e ne diventiamo consapevoli riportando poi
-l'attenzione sul nostro respiro e, sui nostri sensi. Questo è proprio il momento di massima
+La gentilezza è la chiave della consapevolezza, anche al di fuori della meditazione. Questo non per deresponsabilizzarci, ma per aumentare le probabilità di
+accorgersene anche la prossima volta. Se ci puniamo, il nostro cervello assocerà questa capacità a qualcosa di doloroso e lui, non volendo soffrire, tenderà a notarlo sempre meno. Una meditazione ben riuscita non è quando riusciamo a restare più tempo senza pensare, ma al contrario, quante più volte pensiamo e ne diventiamo consapevoli, riportando poi l'attenzione sul nostro respiro e, sui nostri sensi. Questo è proprio il momento di massima
 consapevolezza. 
 La gentilezza con sé stessi o self kindness non è indulgenza. Se invece scappi e non ritorni più su quel contenuto allora si, è auto indulgenza.
+
+
+
+
+
+
 
 Non sei un progetto, non sei qualcosa da aggiustare; Sei una
 persona di valore per come sei adesso e quindi meriti la tua gentilezza. La nostra cultura ha preso l'abitudine di
@@ -2858,6 +2782,8 @@ smetteremo di correre, arriveremo.
 Forse parlando di meditazione ti aspettavi di provare una sensazione meravigliosa, di mistica trascendenza, invece è
 tutto qui e, preferibile rispetto a qualcosa di così estraniante. Quindi se ti stai chiedendo se stai meditando bene la
 risposta è si, ogni volta che ti accorgi di non essere più presente.
+
+Gurdjieff notò che dicendosi "io sono" portava la sua mente a completare la frase. In questo esercizio cerchiamo invece di restare nel presente e accorgerci di cosa emerge. Dire "io sono" e basta, senza completarlo con qualcosa.
 
 \begin{mdframed}[linewidth=1pt]
 Flow
