--- a/Libro.tex
+++ b/Libro.tex
@@ -14,12 +14,12 @@
 \usepackage{mdframed}
 \usepackage{xurl}
 \usepackage{multicol}
-\usepackage{wrapfig}
 \usepackage[justification=raggedright,singlelinecheck=false]{caption}
 \usepackage{hyperref}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18} % O la versione più recente disponibile
 \usepackage{subcaption}
+\usepackage{tcolorbox}
 \usepackage{floatrow}
 \usepackage{float}
 \usepackage{needspace}
@@ -2854,89 +2854,39 @@ Perché se la libertà non è in me non la troverò da nessuna parte - Pessoa
 Ciò che fuggi é con te - Antonia Pozzi
 \end{mdframed}
 
-
-
-
-
-
 \subsubsection{Ricercare i bisogni}
-Un grande esercizio per conoscere noi stessi, che potremmo applicare ad ogni nostra azione, come un litigio, un qualcosa che abbiamo detto o fatto, chiedersi: Qual è il bisogno che sta dietro? Qual è il  bisogno che mi ha portato a fare questo?
+\begin{wrapfigure}{R}{0.5\textwidth}
+    \vspace{-\baselineskip} 
+    \begin{tcolorbox}[colback=white, colframe=black, sharp corners, boxrule=1pt, width=\linewidth, left=10pt, right=10pt]
+        Un turista d'affari scatta foto a un pescatore che riposa al sole nel suo porto. Incuriosito, gli chiede perché non sia in mare.\\
+        Pescatore: "Ho già pescato abbastanza per oggi."\\
+        Affarista: "Ma se uscissi di nuovo, potresti pescare il doppio!"\\
+        Pescatore: sì, ma perché? \\
+        Affarista dice: per fare soldi. \\
+        Pescatore: soldi per cosa? \\
+        Affarista: per fare quello che ti piace! \\
+        Pescatore: potrò ancora pescare?\\
+        Affarista: sì, ma ci sarà meno pesce\\
+        Pescatore: e vedere i miei figli nuotare?\\
+        Affarista: si, ma forse saranno troppo grandi allora.\\
+        Il pescatore lo ringrazia e declina gentilmente l'offerta.
+        
+        \vspace{0.5em}
+        \footnotesize{Tratto da: "Anekdote zur Senkung der Arbeitsmoral" (1963) - Heinrich Böll}
+    \end{tcolorbox}
+    \vspace{-20pt} 
+\end{wrapfigure}
+Idealmente per ogni nostra nostra azione, come un litigio, qualcosa che abbiamo detto o fatto, potremmo chiederci: Qual è il bisogno che sta dietro? Qual è il bisogno che mi ha portato a fare questo?
 
-Dobbiamo fare attenzione però a non confondere i desideri coi bisogni. Prendiamo l'esempio di una
-ragazza che chiede al suo compagno di rinunciare ad andare a giocare a calcetto con gli amici. Lei ovviamente può
-sopravvivere anche se lui vai a giocare a calcetto, ma non per questo motivo, il desiderio che viene alla luce è meno
-importante. Grazie a questo desiderio noi possiamo ricercare il bisogno che sta dietro, che potrebbe essere quello di
-una richiesta di maggiore vicinanza con il proprio partner. Per questo è importante conoscersi, perché altrimenti i nostri interventi
-potrebbero andare nella direzione sbagliata. In questo caso il nostro fine non era vietare il calcetto, ma avere maggiore
-vicinanza. Se la persona avesse rinunciato al calcetto per stare a casa a guardare un film in maniera passiva con la
-sua compagna, covando del risentimento, lei continuerebbe a provare il disagio della sua distanza, in più, anche lui,
-sarà infelice per la sua rinuncia. Quindi una richiesta più mirata, più consapevole, più chiara, avrebbe potuto
-risolvere meglio il problema, lui avrebbe continuato con il calcetto, in quanto questa rinuncia non è utile al problema
-di lei, ma avrebbero potuto ritagliarsi altri momenti o trovare soluzioni che potessero appagare questo sui bisogno.
+Dobbiamo fare attenzione però a non confondere i desideri coi bisogni. Prendiamo l'esempio di una ragazza che chiede al suo compagno di rinunciare ad andare a giocare a calcetto. Tramite questo desiderio, possiamo ricercare il bisogno che sta dietro, che potrebbe essere quello di richiesta di maggiore vicinanza con il proprio partner. In questo caso il fine non è vietare il calcetto, ma avere maggiore vicinanza. Se la persona avesse rinunciato al calcetto per stare a casa a guardare un film in maniera passiva con la sua compagna, lei continuerebbe a provare il disagio della sua distanza, e lui del risentimento. Quindi una richiesta più mirata, più consapevole, più chiara, avrebbe potuto risolvere meglio il problema, magari ritagliandosi altri momenti per stare assieme.
 
-Le emozioni, infatti, anche quelle che non ci piacciono svolgono funzioni importanti. La rabbia spesso nasconde un
-bisogno e una richiesta di allontanamento da ciò che non ci piace.
-L'invidia e la gelosia, che in misura diversa, tutti abbiamo, può servire a darci uno scossone, a non
-dare le cose per scontato, a farci fare qualcosa in più.
-Ora fermati e pensa ai lati che non vorresti e, accoglili, perché hanno la loro utilità, ci
-vogliono parlare e dirci qualcosa di noi e per noi, accettali, senza modificarli, contempla che potresti non cambiare
-mai e essere così per sempre e ciò non ti fa soffrire. Se ad esempio senti al telegiornale di una rapina e, questo ti
-provoca rabbia, quest'emozione, probabilmente sta dicendo qualcosa di te, forse hai un forte
-valore della giustizia. Può essere utile quindi, a fine giornata, segnarsi i momenti più emotivamente coinvolgenti per
-cercare di trovare indizi su chi sei. Non ti fa soffrire essere irascibile, introverso, solitario, poco disponibile, ma
-l'idea erronea che hai, secondo la quale una persona secondo te “normale” non dovrebbe avere queste caratteristiche.
+Individuiamo un evento che ci procura malessere: “Il mio partner non mi telefona mai”. Ora individuiamo il significato che diamo a questo episodio: “se non mi chiama significa che non mi ama”. Ora troviamo altri cinque significati che può avere questo evento, come ad esempio: “forse ora è impegnato/a”.
+Altrimenti se un nostro collega cura molto i dettagli penseremo che è puntiglioso e, se lo facessimo noi diremmo che  gli altri sono approssimativi. 
 
-Facciamo un esempio: Individuiamo un evento che ci procura malessere: “Il mio partner non mi telefona mai”. Ora
-individuiamo il significato che diamo a questo episodio: “se non mi chiama significa che non mi ama”. Ora troviamo
-almeno altri cinque significati che può avere questo evento, come ad esempio: “forse ora è impegnato/a”.
 
-Durante o dopo un conflitto proviamo a recitare la parte dell'altra persona in modo da mettersi davvero nei suoi panni e capire
-i suoi bisogni. In questo modo cerchiamo di vedere la situazione attraverso gli occhi del nostro interlocutore e non i
-nostri. Cerchiamo di farlo abbattendo le nostre difese senza voler trovare la ragione in noi ad ogni costo.
-Altrimenti, se la mia compagna mi vuole più affetto penserò che è dipendente e piena di esigenze, ma se invece siamo noi a
-volere più affetto potremmo pensare che il nostro partner è distaccato e insensibile. O ancora, se un nostro collega si cura
-molto dei dettagli penseremo che è puntiglioso e, quando siamo noi ad essere meticolosi potremmo credere che gli altri sono
-superficiali e approssimativi. Oltre a cercare di capire gli altri, dovremmo cercare anche di far capire i bisogni che
-stanno dietro alle nostre richieste. Nel libro “Le parole sono finestre (oppure
-muri)”\endnote{\raggedright\url{https://www.amazon.it/dp/8887178100}} viene riportato un episodio in cui una donna, comunicando con sincerità e vulnerabilità, è riuscita a evitare un’aggressione. Si tratta di un caso particolare, non generalizzabile, ma che mostra come, in certe circostanze, anche il contatto empatico possa influenzare l’altro. Le persone vittime di violenza, spesso non vengono viste come esseri umani dai propri aggressori, vengono
-disumanizzate e appaiono solo come strumenti per i propri fini. La donna del racconto è riuscita a evitare lo stupro
-perché comunicava come si sentiva e i suoi sentimenti, inoltre chiedeva al suo aggressore se lo volesse davvero fare,
-anche se lei si sentiva malissimo e che avrebbe preferito che sui se ne andasse. 
 
-Altro metodo di indagine per individuare i propri bisogni e la distinzione tra i doveri e i voleri. Le cose che fai, le
-vuoi fare o credi di doverle fare? La linea può essere sottile, a volte possiamo trasformare i devo in
-voglio. Ad esempio se “voglio” stare in forma e “devo” andare in palestra, indirettamente “voglio” andare in palestra.
-Per ogni scelta che facciamo, ci potremmo chiedere: per chi
-lo stiamo facendo? È una cosa che davvero voglio fare o devo fare? Questo non significa che dobbiamo defilarci dai
-nostri doveri. Un esempio classico è quello di scegliere la scuola superiore o il percorso universitario che hanno
-scelto i nostri genitori e non noi. Durante il giorno chiediamoci: le cose che ho fatto vanno nella direzione della
-mia felicità? Mi fanno sentire una persona migliore? Mi realizzano? 
-Oltre a chiederci perché facciamo ciò che facciamo, possiamo anche chiederci, per chi lo facciamo?
-Quale bisogno ci sta dietro? Quale pretesa ci sta dietro?
 
-Meglio vivere con un obiettivo o un valore?
-Un obiettivo è legato al tempo, una volta raggiunto possiamo eliminarlo dalla nostra lista delle cose da fare e passare ad altro. I nostri valori, invece, sono come una bussola. Gli obiettivi vengono generati dai nostri valori.
-
-Se l'obiettivo è avere tanti soldi, allora ne vorremo sempre di più. Se il valore è la libertà personale, allora avremmo bisogno solo di quei soldi per fare ciò che ci piace. Se l'obiettivo è viaggiare, trangugeremo ogni esperienza. Se il valore è la scoperta, potremmo scoprire che non conoscevamo la provincia in cui viviamo.
-
-\begin{mdframed}[linewidth=1pt]
-Storia tratta dal libro “Il caffè alla fine del mondo”\endnote{\raggedright\url{https://www.amazon.it/dp/B07QX97V5B}}
-
-Un affarista chiede a un pescatore come passa le giornate\newline
-Pescatore: faccio colazione con la mi famiglia, pesco, poi la sera passeggio con mia moglie guardando i figli nuotare
-nell'oceano.\newline
-Affarista: riusciresti a pescare molto più pesce di quanto hai bisogno?
-
-Pescatore: sì, ma perché? \newline
-Affarista dice: per fare soldi. \newline
-Pescatore: soldi per cosa? \newline
-Affarista: per fare quello che ti piace! \newline
-Pescatore: potrò ancora pescare?\newline
-Affarista: sì, ma ci sarà meno pesce\newline
-Pescatore: e vedere i miei figli nuotare?\newline
-Affarista: si, ma forse saranno troppo grandi allora.\newline
-Il pescatore lo ringrazia e declina gentilmente l'offerta 
-\end{mdframed}
+ 
 
 Quante volte abbiamo pensato a quali sono i nostri valori?
 Sappiamo rispondere davvero a questa domanda? O ci ritroveremo a dire la famiglia, il lavoro,
@@ -2996,6 +2946,11 @@ La ricerca scientifica ha osservato che avere uno scopo nella vita è strettamen
 Luca Mazzucchelli dice che se ti stressa ti interessa. Le feste di compleanno dei figlio lo stressano e non lo rendono particolarmente felice, ma per lui è importante rendere felici i suoi bambini. Non si tratta di sconfiggere lo stress, ma dandogli un significato lo si può affrontare meglio, lo si comprende e lo si accetta. Se si ha ansia di parlare in pubblico, non è consigliabile cercare di superare questo ostacolo soltanto di sforzo, ma trovando un valore, una motivazione per fare ciò che si vorrebbe fare. Se ci neghiamo a noi stessi questi lati possono svilupparsi inconsapevolmente fuori dai nostri desideri.
 
 Personalmente, credo che entrambe le visioni abbiano valore. Trovare uno scopo nella vita può dare energia e direzione, ma è altrettanto importante non farsi sopraffare dall'idea di dover necessariamente avere uno scopo "grande" o ben definito. Potrebbe esserci una via di mezzo: accettare la vita con apertura e adattabilità, ma anche essere in grado di riconoscere e coltivare ciò che ci appassiona e ci dà un senso di significato. In fondo, forse lo scopo non deve essere una ricerca ossessiva, ma un qualcosa che emerge spontaneamente dal nostro vivere quotidiano, dalle nostre relazioni e dalle nostre esperienze. Parte del nostro scopo, dipende anche dall'impatto che abbiamo sugli altri. Già ora la nostra vita ha un impatto sugli altri. Quindi la ricerca di scopo non deve essere necessariamente nel fare qualcosa di nuovo, ma cercare l'impatto che ha sugli altri, quello che già facciamo. Anche lavori umili come lo spazzino, il contadino, il lavapiatti, il manovale ecc… immaginate come sarebbe il mondo se non ci fossero\endnote{\raggedright\url{https://www.youtube.com/watch?v=aF2MdZjS-0M}}.
+
+Meglio vivere con un obiettivo o un valore?
+Un obiettivo è legato al tempo, una volta raggiunto possiamo eliminarlo dalla nostra lista delle cose da fare e passare ad altro. I nostri valori, invece, sono come una bussola. Gli obiettivi vengono generati dai nostri valori.
+
+Se l'obiettivo è avere tanti soldi, allora ne vorremo sempre di più. Se il valore è la libertà personale, allora avremmo bisogno solo di quei soldi per fare ciò che ci piace. Se l'obiettivo è viaggiare, trangugeremo ogni esperienza. Se il valore è la scoperta, potremmo scoprire che non conoscevamo la provincia in cui viviamo.
 \end{mdframed}
 
 Se pensiamo al lavoro, non è realistico credere che ci
